// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for PR #2940 foreign businesses 1`] = `
"O123456789202401120240115+00000002000+000000000+00000000000+000000000000000001+00000000000+000000000+000000000000000000+00000000000
I987654321202401150000000000001000000000+0000001000000000000
S123456789202401150000000000001000000000+0000002000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for foreign customer, credit invoices (with & without VAT) 1`] = `
"O123456789202401120240115+00000000000+000000000+00000000000+000000000000000004+00000000000+000000000+000000000000000000+00000000000
L000000000202401150000000010123000002598-0000016597000000000
L000000000202401150000000020123000002598+0000016597000000000
L000000000202401150000000080123000000000-0000002000000000000
L000000000202401150000000090123000000000+0000002000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for imports and exports 1`] = `
"O123456789202401120240115+00000001000+000000000+00000000000+000000000000000001+00000000000+000000000+000000000000000000+00000000000
R123456789202401150000000000000000000000+0000003000000000000
Y123456789202401150000000000001000000000+0000005000000000000
S123456789202401150000000000001000000000+0000001000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for local customer, credit invoices with VAT 1`] = `
"O123456789202401120240115+00000000000+000000000+00000000000+000000000000000002+00000000000+000000000+000000000000000000+00000000000
S191919191202401150000000010001000000610-0000003390000000000
S191919191202401150000000020002000000610+0000003390000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for local customer, credit invoices without VAT 1`] = `
"O123456789202401120240115+00000000000+000000000+00000000000+000000000000000000+00000000000+000000000+000000000000000000+00000000000
S191919191202401150000000010001000000000-0000004000000000000
S191919191202401150000000020002000000000+0000004000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for petty cash (taxi invoices - record type is overridden) 1`] = `
"O123456789202401120240115+00000000000+000000000+00000000000+000000000000000000+00000000000+000000122+000000000000000003-00000000122
K000000000202401150000000000001000000067+0000000374000000000
K000000000202401150000000000001000000030+0000000169000000000
K000000000202401150000000000001000000025+0000000140000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for property expenses 1`] = `
"O123456789202401120240115+00000000000+000000000+00000000000+000000000000000000+00000000000+000000000+000000476000000001-00000000476
T123456789202401150000001010202000000476+0000004204000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for standard mixed report 1`] = `
"O123456789202401120240115+00000003000+000000000+00000000000+000000000000000002+00000000000+000000000+000000000000000002+00000000000
S123456789202401150000000000001000000000+0000001000000000000
S123456789202401150000000000002000000000+0000002000000000000
T123456789202401150000000000001000000000+0000000500000000000
T123456789202401150000000000002000000000+0000000300000000000
Y123456789202401150000000000001000000000+0000005000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for zero-VAT transactions 1`] = `
"O123456789202401120240115+00000000000+000000000+00000000000+000000000000000000+00000000000+000000000+000000000000000000+00000000000
S123456789202401150000000000001000000000+0000001000000000000
Y123456789202401150000000000001000000000+0000002000000000000
X123456789"
`;
